feat: New API route for activate/deactivate areas
