# server/api/controllers/webhook.go
@@ -13,6 +13,7 @@ import (
 	serviceinterface "area/gRPC/api/serviceInterface"
 	"area/utils"
 	http_utils "area/utils/httpUtils"
+	"log"
 	"net/http"
 	"strconv"
 
@@ -48,7 +49,12 @@ func handleWebhookPayload(gateway *api.ApiGateway) http.HandlerFunc {
 			return
 		}
 		if cli, ok := gateway.Clients[service]; ok {
-			cli.TriggerWebhook(&serviceinterface.WebhookInfos{Payload: payload, Header: r.Header}, microservice, actionId)
+			_, err := cli.TriggerWebhook(&serviceinterface.WebhookInfos{Payload: payload, Header: r.Header}, microservice, actionId)
+			if err != nil {
+				log.Println(err)
+				http_utils.WriteHTTPResponseErr(&w, 401, err.Error())
+				return
+			}
 			w.WriteHeader(204)
 			return
 		}
