# server/docs/swagger.json
@@ -23,6 +23,48 @@
                 "responses": {}
             }
         },
+        "/area/activate": {
+            "put": {
+                "description": "Activate/Deactivate user's area",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Area"
+                ],
+                "summary": "Activate/Deactivate an area",
+                "parameters": [
+                    {
+                        "description": "Informations about the activation of an area",
+                        "name": "area",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/areas.areaActivateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/serviceinterface.SetActivatedResponseStatus"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/area/list": {
             "get": {
                 "description": "List all user's area",
@@ -42,7 +84,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/controllers.userArea"
+                                "$ref": "#/definitions/areas.userArea"
                             }
                         }
                     },
@@ -529,6 +571,37 @@
         }
     },
     "definitions": {
+        "areas.areaActivateRequest": {
+            "type": "object",
+            "properties": {
+                "activated": {
+                    "type": "boolean"
+                },
+                "area_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "areas.userArea": {
+            "type": "object",
+            "properties": {
+                "action": {
+                    "$ref": "#/definitions/serviceinterface.ServiceStatus"
+                },
+                "activated": {
+                    "type": "boolean"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "reactions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/serviceinterface.ServiceStatus"
+                    }
+                }
+            }
+        },
         "controllers.TokenInformations": {
             "type": "object",
             "properties": {
@@ -548,26 +621,6 @@
                 },
                 "password": {
                     "type": "string"
-                }
-            }
-        },
-        "controllers.userArea": {
-            "type": "object",
-            "properties": {
-                "action": {
-                    "$ref": "#/definitions/serviceinterface.ServiceStatus"
-                },
-                "activated": {
-                    "type": "boolean"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "reactions": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/serviceinterface.ServiceStatus"
-                    }
                 }
             }
         },
@@ -825,6 +878,20 @@
                 },
                 "ref_name": {
                     "description": "Reference Name of the service as it is named in the server",
+                    "type": "string"
+                }
+            }
+        },
+        "serviceinterface.SetActivatedResponseStatus": {
+            "type": "object",
+            "properties": {
+                "action_id": {
+                    "type": "integer"
+                },
+                "activated": {
+                    "type": "boolean"
+                },
+                "description": {
                     "type": "string"
                 }
             }
